Removing undertow and its deps in favor of jdk.httpserver
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>